--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,6 +23,18 @@ layout: default
 
   <div class="post-content e-content" itemprop="articleBody">
     {{ content }}
+    <div style="margin:2em auto 2em auto; max-width:540px; background:rgba(255,255,255,0.92); border-radius:10px; box-shadow:0 2px 8px 0 rgba(180,170,150,0.06); padding:1.2em 1em; text-align:center;">
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSesRb1FHZe7HcKAM54S5aolXgTvwkikzdsoQVDY1SYH8x8wbg/viewform?embedded=true" width="500" height="600" frameborder="0" marginheight="0" marginwidth="0" style="border-radius:8px; border:1px solid #e5e0d8;">Loading…</iframe>
+    </div>
+<style>
+  .dark-mode .form-container {
+    background: #222 !important;
+  }
+  .dark-mode .form-container h3 {
+    color: #e0d8c0 !important;
+  }
+</style>
+    </div>
     {% include navlinks.html %}
   </div>
 
