--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
     {% feed_meta %}
   </head>
-  <body>
+  <body style="background:#ede7dd !important;">
     <main class="page-content">
       <div class="wrapper">
         {{ content }}
